More clip effects UI improvements and bug fixes. Clip/Transition menu no longer allows dragging the clip. Effects container no longer allows dragging the clip accidentally. Clicking effect doesn't select the clip anymore. Resizing clips has been improved (smoother and less jumpy).

--- a/src/timeline/media/css/main.css
+++ b/src/timeline/media/css/main.css
@@ -51,9 +51,11 @@ img {
 
 /* Clips */
 .clip_top { display: -webkit-flex; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.20)), color-stop(100%,rgba(255,255,255,0))); border-radius: 8px; }
-.clip_menu { cursor: pointer; display: -webkit-flex; float:left;margin-top:4px;margin-left:4px;margin-right:4px;min-width:12px;height:12px;background-image: url(../images/menu.png);}
-.clip_label { cursor: move; min-width: 0px; float:left; padding-top: 2px; margin-left: 2px; color:#fff;font-weight:bold; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-.clip_effects { cursor: pointer; display: inline-block; border:1px solid #000; text-align:center; min-width:14px; font-size:13px; padding:1px; font-weight:bold; margin-right:2px; margin-top:2px; background: rgba(54, 25, 25, .2); overflow:hidden; line-height:14px; height:14px; border-top-left-radius: 6px; border-bottom-left-radius: 6px;border-top-right-radius: 6px; border-bottom-right-radius: 6px;}
+.clip_menu { cursor: pointer; display: -webkit-flex; float:left;margin-top:4px;margin-left:4px;margin-right:4px;min-width:12px;height:12px; background-image: url(../images/menu.png);}
+.clip_menu:hover { background-image: url(../images/menu_hover.png); }
+.clip_label { cursor: move; min-width: 0px; float:left; margin-left: 2px; color:#fff;font-weight:bold; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+.clip_effects { cursor: pointer; opacity:0.7; display: inline-block; border:1px solid #000; text-align:center; min-width:12px; font-size:0.8em; padding:1px; padding-top: 2px; font-weight:bold; margin-right:2px; margin-top:2px; background: rgba(54, 25, 25, .2); overflow:hidden; line-height:11px; height:11px; border-top-left-radius: 6px; border-bottom-left-radius: 6px;border-top-right-radius: 6px; border-bottom-right-radius: 6px;}
+.clip_effects:hover { opacity:1.0; border-color: #DFDFDF; }
 .effect_icon {margin-left:1px;margin-right:1px;}
 
 .clip { cursor: move; z-index:5000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:0px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #ef7f00; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(82,82,82,1)), color-stop(100%,rgba(34,38,40,1))); border-radius: 8px; border: 1px solid #4b92ad; border-left: 2px solid #4b92ad; border-right: 2px solid #4b92ad; box-shadow: 0px 0px 10px #000; opacity: 0.95; box-sizing: border-box;}
@@ -90,6 +92,7 @@ img {
 .transition_top { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.75)), color-stop(100%,rgba(255,255,255,0))); border-radius: 8px; }
 .transition { cursor: move; z-index:8000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:0px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #0192c; background: -webkit-linear-gradient(top, #0192c1 0%,#3fa1bf 100%); border-radius: 8px; border: 1px solid #0192c1; border-left: 2px solid #0192c1; border-right: 2px solid #0192c1; background-image: url(../images/transition.png); background-repeat: no-repeat; background-position: center; background-size: 100% 66px; opacity:0.75; box-shadow: 0px 0px 10px #000; box-sizing: border-box; }
 .transition_menu { cursor: pointer; float:left;margin-top:4px;margin-left:4px;margin-right:4px;width:12px;height:12px;background-image: url(../images/menu.png);}
+.transition_menu:hover { background-image: url(../images/menu_hover.png); }
 .transition_label { float:left; padding-top: 2px; width:50px; margin-left: 2px; color:#fff;font-weight:bold;}
 .highlight_transition { border-color: #32b7ea; }
 
